{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 997,
  "lineage": "21f67fba-5e1d-a506-d710-e1607b640a55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:118952515559:instance/i-04511920a22f99c8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04511920a22f99c8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea1ab490c4b79d55",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.121",
            "public_dns": "ec2-3-81-9-187.compute-1.amazonaws.com",
            "public_ip": "3.81.9.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd927ddfae682c8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b16c47f2db51b878"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0218b27f73c0a5a5a",
            "tags": {
              "Name": "instances"
            },
            "tags_all": {
              "Name": "instances"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b16c47f2db51b878"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:118952515559:instance/i-024b615a8086b85e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024b615a8086b85e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea434aa702bf9731",
            "private_dns": "ip-10-0-2-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.121",
            "public_dns": "ec2-3-235-247-142.compute-1.amazonaws.com",
            "public_ip": "3.235.247.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b939850e6e5e6b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b16c47f2db51b878"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02324d18bbda290f8",
            "tags": {
              "Name": "instances"
            },
            "tags_all": {
              "Name": "instances"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b16c47f2db51b878"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:118952515559:instance/i-000b9acdae9945a1e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000b9acdae9945a1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c0124a4c5a2c02dc",
            "private_dns": "ip-10-0-3-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.144",
            "public_dns": "ec2-54-234-181-174.compute-1.amazonaws.com",
            "public_ip": "54.234.181.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddbe6c1d9be61e2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b16c47f2db51b878"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05dc53f163b23fc8d",
            "tags": {
              "Name": "instances"
            },
            "tags_all": {
              "Name": "instances"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b16c47f2db51b878"
            ]
          },
          "dependencies": [
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:internet-gateway/igw-0e264ff474a5d84d8",
            "id": "igw-0e264ff474a5d84d8",
            "owner_id": "118952515559",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:loadbalancer/app/terraform-load-balancer/fe749a1d0a8e7412",
            "arn_suffix": "app/terraform-load-balancer/fe749a1d0a8e7412",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-load-balancer-834690849.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:loadbalancer/app/terraform-load-balancer/fe749a1d0a8e7412",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ff1911977c2cc52b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0218b27f73c0a5a5a"
              },
              {
                "subnet_id": "subnet-02324d18bbda290f8"
              },
              {
                "subnet_id": "subnet-05dc53f163b23fc8d"
              }
            ],
            "subnets": [
              "subnet-0218b27f73c0a5a5a",
              "subnet-02324d18bbda290f8",
              "subnet-05dc53f163b23fc8d"
            ],
            "vpc_id": "vpc-0745d5f25fd526d67",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform-load-balancer-sg",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:listener/app/terraform-load-balancer/fe749a1d0a8e7412/510869a95958c3fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:listener/app/terraform-load-balancer/fe749a1d0a8e7412/510869a95958c3fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:loadbalancer/app/terraform-load-balancer/fe749a1d0a8e7412",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-load-balancer",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load-balancer-sg",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "terraform-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:listener-rule/app/terraform-load-balancer/fe749a1d0a8e7412/510869a95958c3fb/46b04e19637bd27b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:listener-rule/app/terraform-load-balancer/fe749a1d0a8e7412/510869a95958c3fb/46b04e19637bd27b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:listener/app/terraform-load-balancer/fe749a1d0a8e7412/510869a95958c3fb",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-load-balancer",
            "aws_lb_listener.terraform-listener",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load-balancer-sg",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
            "arn_suffix": "targetgroup/terraform-target-group/6063269e3ede5638",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638-20230203202602834700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
            "target_id": "i-04511920a22f99c8d"
          },
          "dependencies": [
            "aws_instance.terraform_instances",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638-20230203202603275600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
            "target_id": "i-024b615a8086b85e7"
          },
          "dependencies": [
            "aws_instance.terraform_instances",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638-20230203202603147300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:118952515559:targetgroup/terraform-target-group/6063269e3ede5638",
            "target_id": "i-000b9acdae9945a1e"
          },
          "dependencies": [
            "aws_instance.terraform_instances",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.EC2-instance-security-group",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:network-acl/acl-039837fe1776294e3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039837fe1776294e3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "118952515559",
            "subnet_ids": [
              "subnet-0218b27f73c0a5a5a"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:network-acl/acl-0113bdf13327935c4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0113bdf13327935c4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "118952515559",
            "subnet_ids": [
              "subnet-02324d18bbda290f8"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:network-acl/acl-0edc4ee9572281986",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0edc4ee9572281986",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "118952515559",
            "subnet_ids": [
              "subnet-05dc53f163b23fc8d"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:route-table/rtb-096ffedd4dff3fe05",
            "id": "rtb-096ffedd4dff3fe05",
            "owner_id": "118952515559",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e264ff474a5d84d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdaa28c355eb616d",
            "route_table_id": "rtb-096ffedd4dff3fe05",
            "subnet_id": "subnet-0218b27f73c0a5a5a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public-route-table",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c30ad2d4348dcecc",
            "route_table_id": "rtb-096ffedd4dff3fe05",
            "subnet_id": "subnet-02324d18bbda290f8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public-route-table",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eecd9cf0c3c01ff1",
            "route_table_id": "rtb-096ffedd4dff3fe05",
            "subnet_id": "subnet-05dc53f163b23fc8d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public-route-table",
            "aws_subnet.subnets",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2-instance-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:security-group/sg-0b16c47f2db51b878",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b16c47f2db51b878",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff1911977c2cc52b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff1911977c2cc52b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic_ssh_http_https",
            "name_prefix": "",
            "owner_id": "118952515559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ec2-security group"
            },
            "tags_all": {
              "Name": "terraform-ec2-security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-load-balancer-sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-load-balancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:security-group/sg-0ff1911977c2cc52b",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ff1911977c2cc52b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "118952515559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:subnet/subnet-0218b27f73c0a5a5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0218b27f73c0a5a5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118952515559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc subnets"
            },
            "tags_all": {
              "Name": "vpc subnets"
            },
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:subnet/subnet-02324d18bbda290f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02324d18bbda290f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118952515559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc subnets"
            },
            "tags_all": {
              "Name": "vpc subnets"
            },
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:subnet/subnet-05dc53f163b23fc8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dc53f163b23fc8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118952515559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc subnets"
            },
            "tags_all": {
              "Name": "vpc subnets"
            },
            "vpc_id": "vpc-0745d5f25fd526d67"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118952515559:vpc/vpc-0745d5f25fd526d67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03788ca34af57002c",
            "default_route_table_id": "rtb-02b45c8cdf0f606a4",
            "default_security_group_id": "sg-057938a930a34758b",
            "dhcp_options_id": "dopt-0b26f595c6169d7db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0745d5f25fd526d67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b45c8cdf0f606a4",
            "owner_id": "118952515559",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}